k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vectora-backend
  namespace: vectora
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vectora-backend
  template:
    metadata:
      labels:
        app: vectora-backend
    spec:
      containers:
        - name: backend
          image: deepan0202/vectora-backend:v1
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 30
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: backend-uploads
---
apiVersion: v1
kind: Service
metadata:
  name: vectora-backend
  namespace: vectora
spec:
  selector:
    app: vectora-backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
